# GTestSetup

./: .gitignore  README.md
GTestSetup/: CMakeLists.txt
GTestSetup/main/: MyClass.cpp  MyClass.h
GTestSetup/test/: MyClassTest.cpp
